# CrashDiagnosticLayer

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/: dependabot.yml
.github/workflows/: cdl.yml
scripts/: CMakeLists.txt  android.py  check_code_format.py  common_codegen.py  generate_source.py  generate_source.sh  known_good.json  run_generator.py  tests.py  update_deps.py
scripts/generators/: base_generator.py  cdl_base_generator.py  command_common_generator.py  command_prepost_generator.py  command_printer_generator.py  command_recorder_generator.py  command_tracker_generator.py  context_generator.py  dispatch_generator.py  gfr_base_generator.py  intercepts_and_prepost_generator.py  layer_base_generator.py  layer_manifest_generator.py  layer_utils_generator.py  object_name_generator.py  spirv_grammar_generator.py  test_icd_generator.py  vulkan_object.py
src/: CMakeLists.txt  VkLayer_crash_diagnostic.def  VkLayer_crash_diagnostic.map  VkLayer_gfr.def  VkLayer_gfr.map  bind_sparse_utils.cc  bind_sparse_utils.cpp  bind_sparse_utils.h  cdl.cc  cdl.cpp  cdl.h  cdl_log_format.yaml  checkpoint.cc  checkpoint.cpp  checkpoint.h  command.cc  command.cpp  command.h  command_buffer_tracker.cc  command_buffer_tracker.h  command_pool.cc  command_pool.cpp  command_pool.h  crash_diagnostic_layer.json.in  descriptor_set.cc  descriptor_set.h  device.cc  device.cpp  device.h  gfr.cc  gfr.h  layer_base.cpp  layer_base.h  layer_settings.cpp  layer_settings.h  linear_allocator.h  logger.cc  logger.cpp  logger.h  marker.cc  (+28 more)
src/android/: CMakeLists.txt
tests/: CMakeLists.txt
tests/android/: AndroidManifest.xml  CMakeLists.txt
tests/framework/: bound_buffer.cpp  bound_buffer.h  bound_image.cpp  bound_image.h  cdl_tests.cpp  compute_pipeline.cpp  compute_pipeline.h  config.h.in  descriptorset_helper.cpp  descriptorset_helper.h  dump_file.cpp  dump_file.h  error_monitor.cpp  error_monitor.h  graphics_pipeline.cpp  graphics_pipeline.h  layer_settings.cpp  layer_settings.h  layer_settings_generated.h  test_fixtures.cpp  test_fixtures.h
tests/icd/: CDL_Test_ICD.def  CMakeLists.txt  README.md  test_icd.cpp  test_icd.h  test_icd_command.cpp  test_icd_command.h  test_icd_device.cpp  test_icd_device.h  test_icd_fault_info.h  test_icd_fence.cpp  test_icd_fence.h  test_icd_memory.h  test_icd_queue.cpp  test_icd_queue.h  test_icd_semaphore.cpp  test_icd_semaphore.h
tests/unit/: create_instance.cpp  gpu_crash.cpp  graphics.cpp  ray_tracing.cpp  settings.cpp  shaders.h  sync.cpp  tooling.cpp  watchdog.cpp
